Generics/Code5_error_report.txt
javac errors for Code5.java 
Code5.java:23: error: incompatible types: bad return type in lambda expression
                return "Bright Color"; 
                       ^
    String cannot be converted to Color
1 error
 
============================================================================= 
ExtendJ errors for Code5.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code5.java:23: error: return value must be an instance of java.awt.Color which java.lang.String is not
 
============================================================================= 
Eclipse ECJ errors for Code5.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code5.java (at line 23)
	return "Bright Color"; 
	       ^^^^^^^^^^^^^^
Type mismatch: cannot convert from String to Color
----------
1 problem (1 error)
